feat: QueryDSL 도입을 통한 할 일(Todo) 동적 검색 API 구현
- Spring Boot 3.x 환경에 맞춘 QueryDSL Gradle 설정 추가 및 src/main/generated 경로 지정
- TodoRepositoryCustom 및 구현체를 활용한 실무형 아키텍처 구조 설계
- JWT 토큰(String loginId) 검증 후 유저 엔티티 조회를 거쳐 QueryDSL로 매핑하는 가교 로직 구축
- JwtAuthenticationFilter 내 ROLE_USER 권한 부여를 통한 403 인가 에러 해결