@@ -6,13 +6,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority; // 💡 권한 설정을 위한 임포트 추가
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List; // 💡 List 사용을 위한 임포트 변경
 
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -28,7 +29,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             if(jwtTokenProvider.validateToken(token)){
                 String loginId = jwtTokenProvider.getLoginId(token);
 
-                UserDetails userDetails = new User(loginId, "", Collections.emptyList());
+                // 💡 [핵심 수정] Collections.emptyList() 대신 기본 유저 권한("ROLE_USER")을 주입합니다.
+                // 이렇게 해야 스프링 시큐리티가 정상적인 인증 유저로 인지합니다.
+                UserDetails userDetails = new User(loginId, "", List.of(new SimpleGrantedAuthority("ROLE_USER")));
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userDetails, null, userDetails.getAuthorities());
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
